--- a/k8s/helm/movie-service/values.yaml
+++ b/k8s/helm/movie-service/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 namespace: kubeflix
 
 image:
-  repository: movie-service
+  repository: ghcr.io/sajjadm624/movie-service
   tag: latest
   pullPolicy: IfNotPresent
 
